# qaa_playwright_e2e

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: config.yml
base/: base_page.py  base_test.py
config/: data_config.py  link_config.py  selectors_config.py  url_config.py
data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 207dd1b993b1469a.json  296bdaa0c1a537f.json  2adc8931d6bc55fa.json  305447a9fa7a4c37.json  3698b838148d1843.json  3c76712a2db932df.json  55b13f20fd60dda2.json  5c6de8c622d13234.json  6913a12947d3d2b7.json  79a9ee8ff9a3744.json  7e0a9c5630d66a97.json  7e3c0613e0f7bc75.json  7e44079f9158f182.json  81747a888f138ab2.json  9058cee022c4a585.json  954715121ff1f49a.json  a32c128ccb51b39c.json  bb3123a30257fd68.json  c1ed41346c03a915.json  d9fb418f60d1de75.json  db59c6372c1cc5be.json  dfad932b1829f2cb.json  e96a83a1618f201a.json
export/: influxDbData.txt  prometheusData.txt
fixtures/: client_fixture.py  environment_fixture.py  launch_fixture.py
history/: duration-trend.json  history.json
pages/: contact_details_page.py  dashboard_page.py  login_page.py  personal_details_page.py  personal_page.py
tests/: contact_details_change_test.py  personal_details_change_test.py  profile_change_test.py
widgets/: duration-trend.json  duration.json  severity.json  status-chart.json  summary.json
