[project]
name = "qaa_playwrite_e2e"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "darli.ro", email = "glicerinn@gmail.com"},
]
requires-python = ">=3.13.0"
readme = "README.md"

dependencies = [
    "allure-pytest",
    "allure-python-commons",
    "attrs",
    "certifi",
    "cfgv",
    "charset-normalizer",
    "distlib",
    "Faker",
    "filelock",
    "h11",
    "identify",
    "idna",
    "iniconfig",
    "nodeenv",
    "outcome",
    "packaging",
    "platformdirs",
    "playwright",
    "pluggy",
    "pre-commit",
    "pyee",
    "PySocks",
    "pytest",
    "pytest-playwright",
    "python-dateutil",
    "python-dotenv",
    "python-slugify",
    "PyYAML",
    "requests",
    "ruff",
    "six",
    "sniffio",
    "sortedcontainers",
    "text-unidecode",
    "typing_extensions",
    "urllib3",
    "virtualenv",
    "wsproto",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
install_browsers = "playwright install"

[tool.pytest.ini_options]
markers = [
    "smoke: mark for a smoke test",
    "regression: mark for a regression test"
]
